rawstudiodir = $(datadir)/rawstudio/profiles
rawstudio_DATA = rawstudio-cameras.xml\
	generic_camera_profile.icc\
	sRGB.icc\
	prophoto.icc\
	compatibleWithAdobeRGB1998.icc\
	sRGB-linear.icc\
	prophoto-linear.icc\
	compatibleWithAdobeRGB1998-linear.icc\
	Neutral-With-Tonecurve-sRGB.dcp\
	Neutral-With-Tonecurve-AdobeRGB.dcp\
	Neutral-With-Tonecurve-Prophoto.dcp\
	AGFAPHOTO_DC-833m-simple.dcp\
	Apple_QuickTake-simple.dcp\
	Canon_EOS_1000D-simple.dcp\
	Canon_EOS_1100D-simple.dcp\
	Canon_EOS_10D-simple.dcp\
	Canon_EOS_20D-simple.dcp\
	Canon_EOS_20Da-simple.dcp\
	Canon_EOS_300D-simple.dcp\
	Canon_EOS_30D-simple.dcp\
	Canon_EOS_350D-simple.dcp\
	Canon_EOS_400D-simple.dcp\
	Canon_EOS_40D-simple.dcp\
	Canon_EOS_450D-simple.dcp\
	Canon_EOS_500D-simple.dcp\
	Canon_EOS_550D-simple.dcp\
	Canon_EOS_50D-simple.dcp\
	Canon_EOS_5D_Mark_II-simple.dcp\
	Canon_EOS_5D-simple.dcp\
	Canon_EOS_600D-simple.dcp\
	Canon_EOS_60D-simple.dcp\
	Canon_EOS_60Da-simple.dcp\
	Canon_EOS_7D-simple.dcp\
	Canon_EOS_D2000-simple.dcp\
	Canon_EOS_D30-simple.dcp\
	Canon_EOS_D60-simple.dcp\
	Canon_EOS_D6000-simple.dcp\
	Canon_EOS-1D_Mark_II_N-simple.dcp\
	Canon_EOS-1D_Mark_II-simple.dcp\
	Canon_EOS-1D_Mark_III-simple.dcp\
	Canon_EOS-1D_Mark_IV-simple.dcp\
	Canon_EOS-1D-simple.dcp\
	Canon_EOS-1Ds_Mark_II-simple.dcp\
	Canon_EOS-1Ds_Mark_III-simple.dcp\
	Canon_EOS-1DS-simple.dcp\
	Canon_EOS-simple.dcp\
	Canon_PowerShot_A470-simple.dcp\
	Canon_PowerShot_A5-simple.dcp\
	Canon_PowerShot_A50-simple.dcp\
	Canon_PowerShot_A530-simple.dcp\
	Canon_PowerShot_A610-simple.dcp\
	Canon_PowerShot_A620-simple.dcp\
	Canon_PowerShot_A630-simple.dcp\
	Canon_PowerShot_A640-simple.dcp\
	Canon_PowerShot_A650-simple.dcp\
	Canon_PowerShot_A720-simple.dcp\
	Canon_PowerShot_G1-simple.dcp\
	Canon_PowerShot_G10-simple.dcp\
	Canon_PowerShot_G11-simple.dcp\
	Canon_PowerShot_G12-simple.dcp\
	Canon_PowerShot_G2-simple.dcp\
	Canon_PowerShot_G3-simple.dcp\
	Canon_PowerShot_G5-simple.dcp\
	Canon_PowerShot_G6-simple.dcp\
	Canon_PowerShot_G9-simple.dcp\
	Canon_PowerShot_Pro1-simple.dcp\
	Canon_PowerShot_Pro70-simple.dcp\
	Canon_PowerShot_Pro90-simple.dcp\
	Canon_PowerShot_S100-simple.dcp\
	Canon_PowerShot_S3_IS-simple.dcp\
	Canon_PowerShot_S30-simple.dcp\
	Canon_PowerShot_S40-simple.dcp\
	Canon_PowerShot_S45-simple.dcp\
	Canon_PowerShot_S50-simple.dcp\
	Canon_PowerShot_S60-simple.dcp\
	Canon_PowerShot_S70-simple.dcp\
	Canon_PowerShot_SX1_IS-simple.dcp\
	Canon_PowerShot_SX110_IS-simple.dcp\
	Canon_PowerShot_S90-simple.dcp\
	Canon_PowerShot_S95-simple.dcp\
	CASIO_EX-S20-simple.dcp\
	CASIO_EX-Z750-simple.dcp\
	CINE_650-simple.dcp\
	CINE_660-simple.dcp\
	CINE-simple.dcp\
	Contax_N_Digital-simple.dcp\
	EPSON_R-D1-simple.dcp\
	FUJIFILM_FinePix_E550-simple.dcp\
	FUJIFILM_FinePix_E900-simple.dcp\
	FUJIFILM_FinePix_F600_EXR-simple.dcp\
	FUJIFILM_FinePix_F7-simple.dcp\
	FUJIFILM_FinePix_F8-simple.dcp\
	FUJIFILM_FinePix_S100FS-simple.dcp\
	FUJIFILM_FinePix_S20Pro-simple.dcp\
	FUJIFILM_FinePix_S2Pro-simple.dcp\
	FUJIFILM_FinePix_S3Pro-simple.dcp\
	FUJIFILM_FinePix_S5000-simple.dcp\
	FUJIFILM_FinePix_S5100-simple.dcp\
	FUJIFILM_FinePix_S5200-simple.dcp\
	FUJIFILM_FinePix_S5500-simple.dcp\
	FUJIFILM_FinePix_S5600-simple.dcp\
	FUJIFILM_FinePix_S5Pro-simple.dcp\
	FUJIFILM_FinePix_S6-simple.dcp\
	FUJIFILM_FinePix_S6000fd-simple.dcp\
	FUJIFILM_FinePix_S7000-simple.dcp\
	FUJIFILM_FinePix_S9000-simple.dcp\
	FUJIFILM_FinePix_S9100-simple.dcp\
	FUJIFILM_FinePix_S9500-simple.dcp\
	FUJIFILM_FinePix_S9600-simple.dcp\
	FUJIFILM_FinePix_X100-simple.dcp\
	FUJIFILM_IS_Pro-simple.dcp\
	FUJIFILM_IS-1-simple.dcp\
	Fuji_HS10-simple.dcp\
	FUJIFILM_FinePix_S200EXR-simple.dcp\
	Fuji_HS20EXR-simple.dcp\
	FUJIFILM_FinePix_E810-simple.dcp\
	FUJIFILM_FinePix_F700-simple.dcp\
	FUJIFILM_FinePix_F710-simple.dcp\
	FUJIFILM_FinePix_F550EXR-simple.dcp\
	Imacon_Ixpress-simple.dcp\
	Kodak_DCS_Pro_14-simple.dcp\
	Kodak_DCS_Pro_14nx-simple.dcp\
	Kodak_DCS_Pro_SLR-simple.dcp\
	Kodak_DCS315C-simple.dcp\
	Kodak_DCS330C-simple.dcp\
	KODAK_DCS420-simple.dcp\
	KODAK_DCS460-simple.dcp\
	Kodak_DCS520C-simple.dcp\
	Kodak_DCS560C-simple.dcp\
	Kodak_DCS620C-simple.dcp\
	Kodak_DCS620X-simple.dcp\
	Kodak_DCS660C-simple.dcp\
	Kodak_DCS720X-simple.dcp\
	Kodak_DCS760C-simple.dcp\
	KODAK_EASYSHARE_Z1015-simple.dcp\
	KODAK_EasyShare_Z980-simple.dcp\
	KODAK_EOSDCS1-simple.dcp\
	KODAK_EOSDCS3B-simple.dcp\
	KODAK_NC2000-simple.dcp\
	KODAK_P712-simple.dcp\
	KODAK_P850-simple.dcp\
	KODAK_P880-simple.dcp\
	Kodak_ProBack-simple.dcp\
	Kodak_ProBack645-simple.dcp\
	Konica_Minolta_Maxxum_5D-simple.dcp\
	Konica_Minolta_Maxxum_7D-simple.dcp\
	Konica_Minolta_DiMAGE_A2-simple.dcp\
	Konica_Minolta_DiMAGE_A200-simple.dcp\
	Leaf_Aptus_54S-simple.dcp\
	Leaf_Aptus_65-simple.dcp\
	Leaf_Aptus_75-simple.dcp\
	Leaf_CMost-simple.dcp\
	Leaf_Valeo_6-simple.dcp\
	Leaf-simple.dcp\
	Leica-M8-simple.dcp\
	Leica-M9-native.dcp\
	Leica-X1-native.dcp\
	Leica-S2-simple.dcp\
	Mamiya_ZD-simple.dcp\
	Micron_2010-simple.dcp\
	Minolta_DiMAGE_5-simple.dcp\
	Minolta_DiMAGE_7-simple.dcp\
	Minolta_DiMAGE_7i-simple.dcp\
	Minolta_DiMAGE_7Hi-simple.dcp\
	Minolta_DiMAGE_A1-simple.dcp\
	Minolta_DiMAGE_Z2-simple.dcp\
	MINOLTA_DYNAX_5-simple.dcp\
	MINOLTA_DYNAX_7-simple.dcp\
	MOTOROLA_PIXL-simple.dcp\
	NIKON_1_V1.dcp\
	NIKON_1_J1.dcp\
	NIKON_COOLPIX_P6000-simple.dcp\
	NIKON_COOLPIX_P7000-simple.dcp\
	NIKON_D1-simple.dcp\
	NIKON_D100-simple.dcp\
	NIKON_D1H-simple.dcp\
	NIKON_D1X-simple.dcp\
	NIKON_D200-simple.dcp\
	NIKON_D2H-simple.dcp\
	NIKON_D2X-simple.dcp\
	NIKON_D3-simple.dcp\
	NIKON_D300-simple.dcp\
	NIKON_D3000-simple.dcp\
	NIKON_D3100-simple.dcp\
	NIKON_D3200-simple.dcp\
	NIKON_D3X-simple.dcp\
	NIKON_D40-simple.dcp\
	NIKON_D40X-simple.dcp\
	NIKON_D50-simple.dcp\
	NIKON_D5000-simple.dcp\
	NIKON_D5100-simple.dcp\
	NIKON_D60-simple.dcp\
	NIKON_D70-simple.dcp\
	NIKON_D70s-simple.dcp\
	NIKON_D700-simple.dcp\
	NIKON_D7000-simple.dcp\
	NIKON_D80-simple.dcp\
	NIKON_D90-simple.dcp\
	NIKON_E2100-simple.dcp\
	NIKON_E2500-simple.dcp\
	NIKON_E4300-simple.dcp\
	NIKON_E4500-simple.dcp\
	NIKON_E5000-simple.dcp\
	NIKON_E5400-simple.dcp\
	NIKON_E5700-simple.dcp\
	NIKON_E8400-simple.dcp\
	NIKON_E8700-simple.dcp\
	NIKON_E8800-simple.dcp\
	NIKON_E950-simple.dcp\
	NIKON_E995-simple.dcp\
	NIKON_D3S-simple.dcp\
	OLYMPUS_C5050-simple.dcp\
	OLYMPUS_C5060-simple.dcp\
	OLYMPUS_C70-simple.dcp\
	OLYMPUS_C7070-simple.dcp\
	OLYMPUS_C80-simple.dcp\
	OLYMPUS_E-1-simple.dcp\
	OLYMPUS_E-10-simple.dcp\
	OLYMPUS_E-20-simple.dcp\
	OLYMPUS_E-3-simple.dcp\
	OLYMPUS_E-30-simple.dcp\
	OLYMPUS_E-300-simple.dcp\
	OLYMPUS_E-330-simple.dcp\
	OLYMPUS_E-400-simple.dcp\
	OLYMPUS_E-410-simple.dcp\
	OLYMPUS_E-420-simple.dcp\
	OLYMPUS_E-450-simple.dcp\
	OLYMPUS_E-5-simple.dcp\
	OLYMPUS_E-500-simple.dcp\
	OLYMPUS_E-510-simple.dcp\
	OLYMPUS_E-520-simple.dcp\
	OLYMPUS_E-620-simple.dcp\
	OLYMPUS_E-P1-simple.dcp\
	OLYMPUS_E-P3-simple.dcp\
	OLYMPUS_E-PL1-simple.dcp\
	OLYMPUS_E-PL1s-simple.dcp\
	OLYMPUS_E-PL2-simple.dcp\
	OLYMPUS_E-PL3-simple.dcp\
	OLYMPUS_E-PM1-simple.dcp\
	OLYMPUS_SP3-simple.dcp\
	OLYMPUS_SP350-simple.dcp\
	OLYMPUS_SP500UZ-simple.dcp\
	OLYMPUS_SP510UZ-simple.dcp\
	OLYMPUS_SP550UZ-simple.dcp\
	OLYMPUS_SP560UZ-simple.dcp\
	OLYMPUS_SP570UZ-simple.dcp\
	OLYMPUS_XZ-1-simple.dcp\
	Panasonic_DMC-FX150-simple.dcp\
	Panasonic_DMC-FZ18-simple.dcp\
	Panasonic_DMC-FZ28-simple.dcp\
	Panasonic_DMC-FZ30-simple.dcp\
	Panasonic_DMC-FZ35-simple.dcp\
	Panasonic_FZ100-simple.dcp\
	Panasonic_FZ40-simple.dcp\
	Panasonic_LX5-simple.dcp\
	Panasonic_DMC-FZ50-simple.dcp\
	Panasonic_DMC-FZ8-simple.dcp\
	Panasonic_DMC-G1-simple.dcp\
	Panasonic_DMC-G10-simple.dcp\
	Panasonic_DMC-G2-simple.dcp\
	Panasonic_DMC-G3-simple.dcp\
	Panasonic_DMC-GF1-simple.dcp\
	Panasonic_DMC-GF2-simple.dcp\
	Panasonic_DMC-GF3-simple.dcp\
	Panasonic_DMC-GH1-simple.dcp\
	Panasonic_DMC-GH2-simple.dcp\
	Panasonic_DMC-GX1-simple.dcp\
	Panasonic_DMC-GX7-simple.dcp\
	Panasonic_DMC-L1-simple.dcp\
	Panasonic_DMC-L10-simple.dcp\
	Panasonic_DMC-LC1-simple.dcp\
	Panasonic_DMC-LX1-simple.dcp\
	Panasonic_DMC-LX2-simple.dcp\
	Panasonic_DMC-LX3-simple.dcp\
	PENTAX_istDL2-simple.dcp\
	PENTAX_istDL-simple.dcp\
	PENTAX_istDS2-simple.dcp\
	PENTAX_istD-simple.dcp\
	PENTAX_istDS-simple.dcp\
	PENTAX_K-01-simple.dcp\
	PENTAX_K-5-simple.dcp\
	PENTAX_K-7-simple.dcp\
	PENTAX_K-m-simple.dcp\
	PENTAX_K-r-simple.dcp\
	PENTAX_K1-simple.dcp\
	PENTAX_K100D-simple.dcp\
	PENTAX_K110D-simple.dcp\
	PENTAX_K10D-simple.dcp\
	PENTAX_K2000-simple.dcp\
	PENTAX_K200D-simple.dcp\
	PENTAX_K20D-simple.dcp\
	PENTAX_K-30-simple.dcp\
	PENTAX_K-x-simple.dcp\
	PENTAX_Q-simple.dcp\
	PENTAX_645D-simple.dcp\
	Phase_One_H_20-simple.dcp\
	Phase_One_P_2-simple.dcp\
	Phase_One_P_30-simple.dcp\
	Phase_One_P_45-simple.dcp\
	Phase_One_P65-simple.dcp\
	Ricoh_A12_28mm-simple.dcp\
	Ricoh_A12_50mm-simple.dcp\
	Ricoh_Digital_3-simple.dcp\
	Ricoh_GX200-simple.dcp\
	Ricoh_S10_24-72mm-simple.dcp\
	SAMSUNG_GX-1-simple.dcp\
	SAMSUNG_NX100-simple.dcp\
	SAMSUNG_NX200-simple.dcp\
	SAMSUNG_NX210-simple.dcp\
	SAMSUNG_S85-simple.dcp\
	SAMSUNG_WB2000-simple.dcp\
	SAMSUNG_NX11-simple.dcp\
	SAMSUNG_EX1-simple.dcp\
	SAMSUNG_GX10-simple.dcp\
	SAMSUNG_GX-1L-simple.dcp\
	SAMSUNG_GX-1S-simple.dcp\
	SAMSUNG_GX20-simple.dcp\
	SAMSUNG_NX10-simple.dcp\
	SAMSUNG_NX5-simple.dcp\
	Sinar-simple.dcp\
	SONY_DSC-F828-simple.dcp\
	SONY_DSC-R1-simple.dcp\
	SONY_DSC-V3-simple.dcp\
	SONY_DSLR-A100-simple.dcp\
	SONY_DSLR-A200-simple.dcp\
	SONY_DSLR-A230-simple.dcp\
	SONY_DSLR-A290-simple.dcp\
	SONY_DSLR-A300-simple.dcp\
	SONY_DSLR-A330-simple.dcp\
	SONY_DSLR-A350-simple.dcp\
	SONY_DSLR-A380-simple.dcp\
	SONY_DSLR-A390-simple.dcp\
	SONY_DSLR-A450-simple.dcp\
	SONY_DSLR-A500-simple.dcp\
	SONY_DSLR-A550-simple.dcp\
	SONY_DSLR-A560-simple.dcp\
	SONY_DSLR-A580-simple.dcp\
	SONY_DSLR-A700-simple.dcp\
	SONY_DSLR-A850-simple.dcp\
	SONY_DSLR-A900-simple.dcp\
	SONY_DSLR-A5-simple.dcp\
	SONY_NEX-3-simple.dcp\
	SONY_NEX-5-simple.dcp\
	SONY_NEX-5N-simple.dcp\
	SONY_NEX-C3-simple.dcp\
	SONY_SLTA33-simple.dcp\
	SONY_SLTA35-simple.dcp\
	SONY_SLTA37-simple.dcp\
	SONY_SLTA55V-simple.dcp\
	SONY_SLTA65V-simple.dcp\
	SONY_SLTA77V-simple.dcp\
	Canon_EOS_5D_Mark_III-simple.dcp\
	Canon_PowerShot_G1X-simple.dcp\
	Canon_EOS-1D_X-simple.dcp\
	FUJIFILM_FinePix_HS30_EXR-simple.dcp\
	NIKON_D800E-simple.dcp\
	FUJIFILM_FinePix_X-S1-simple.dcp\
	NIKON_D4.dcp\
	NIKON_D800-simple.dcp\
	Canon_EOS-1D_Mark_III_Rawstudio_Advanced_Profile.dcp\
	Canon_EOS-1D_Mark_IV_Rawstudio_Advanced_Profile.dcp\
	Canon_EOS-1D_X_Rawstudio_Advanced_Profile.dcp\
	Canon_EOS-1Ds_Mark_III_Rawstudio_Advanced_Profile.dcp\
	Canon_EOS_1000D_Rawstudio_Advanced_Profile.dcp\
	Canon_EOS_1100D_Rawstudio_Advanced_Profile.dcp\
	Canon_EOS_400D_Rawstudio_Advanced_Profile.dcp\
	Canon_EOS_40D_Rawstudio_Advanced_Profile.dcp\
	Canon_EOS_450D_Rawstudio_Advanced_Profile.dcp\
	Canon_EOS_500D_Rawstudio_Advanced_Profile.dcp\
	Canon_EOS_50D_Rawstudio_Advanced_Profile.dcp\
	Canon_EOS_550D_Rawstudio_Advanced_Profile.dcp\
	Canon_EOS_5D_Mark_III_Rawstudio_Advanced_Profile.dcp\
	Canon_EOS_5D_Mark_II_Rawstudio_Advanced_Profile.dcp\
	Canon_EOS_600D_Rawstudio_Advanced_Profile.dcp\
	Canon_EOS_60D_Rawstudio_Advanced_Profile.dcp\
	Canon_EOS_650D_Rawstudio_Advanced_Profile.dcp\
	Canon_EOS_6D_Rawstudio_Advanced_Profile.dcp\
	Canon_EOS_7D_Rawstudio_Advanced_Profile.dcp\
	Canon_EOS_M_Rawstudio_Advanced_Profile.dcp\
	Canon_PowerShot_G10_Rawstudio_Advanced_Profile.dcp\
	Canon_PowerShot_G11_Rawstudio_Advanced_Profile.dcp\
	Canon_PowerShot_G12_Rawstudio_Advanced_Profile.dcp\
	Canon_PowerShot_G15_Rawstudio_Advanced_Profile.dcp\
	Canon_PowerShot_G1_X_Rawstudio_Advanced_Profile.dcp\
	Canon_PowerShot_S100_Rawstudio_Advanced_Profile.dcp\
	Canon_PowerShot_S110_Rawstudio_Advanced_Profile.dcp\
	Canon_PowerShot_S90_Rawstudio_Advanced_Profile.dcp\
	Nikon_1_J1_Rawstudio_Advanced_Profile.dcp\
	Nikon_1_V1_Rawstudio_Advanced_Profile.dcp\
	Nikon_Coolpix_P7700_Rawstudio_Advanced_Profile.dcp\
	Nikon_D200_Rawstudio_Advanced_Profile.dcp\
	Nikon_D2Xs_Rawstudio_Advanced_Profile.dcp\
	Nikon_D3000_Rawstudio_Advanced_Profile.dcp\
	Nikon_D300S_Rawstudio_Advanced_Profile.dcp\
	Nikon_D300_Rawstudio_Advanced_Profile.dcp\
	Nikon_D3100_Rawstudio_Advanced_Profile.dcp\
	Nikon_D3200_Rawstudio_Advanced_Profile.dcp\
	Nikon_D3S_Rawstudio_Advanced_Profile.dcp\
	Nikon_D3X_Rawstudio_Advanced_Profile.dcp\
	Nikon_D3_Rawstudio_Advanced_Profile.dcp\
	Nikon_D40X_Rawstudio_Advanced_Profile.dcp\
	Nikon_D40_Rawstudio_Advanced_Profile.dcp\
	Nikon_D4_Rawstudio_Advanced_Profile.dcp\
	Nikon_D5000_Rawstudio_Advanced_Profile.dcp\
	Nikon_D5100_Rawstudio_Advanced_Profile.dcp\
	Nikon_D600_Rawstudio_Advanced_Profile.dcp\
	Nikon_D60_Rawstudio_Advanced_Profile.dcp\
	Nikon_D7000_Rawstudio_Advanced_Profile.dcp\
	Nikon_D700_Rawstudio_Advanced_Profile.dcp\
	Nikon_D800_Rawstudio_Advanced_Profile.dcp\
	Nikon_D80_Rawstudio_Advanced_Profile.dcp\
	Nikon_D90_Rawstudio_Advanced_Profile.dcp\
	Olympus_E-30_Rawstudio_Advanced_Profile.dcp\
	Olympus_E-3_Rawstudio_Advanced_Profile.dcp\
	Olympus_E-410_Rawstudio_Advanced_Profile.dcp\
	Olympus_E-420_Rawstudio_Advanced_Profile.dcp\
	Olympus_E-510_Rawstudio_Advanced_Profile.dcp\
	Olympus_E-520_Rawstudio_Advanced_Profile.dcp\
	Olympus_E-5_Rawstudio_Advanced_Profile.dcp\
	Olympus_E-620_Rawstudio_Advanced_Profile.dcp\
	Olympus_E-M5_Rawstudio_Advanced_Profile.dcp\
	Olympus_E-P2_Rawstudio_Advanced_Profile.dcp\
	Olympus_E-P3_Rawstudio_Advanced_Profile.dcp\
	Olympus_E-PL1_Rawstudio_Advanced_Profile.dcp\
	Olympus_E-PL2_Rawstudio_Advanced_Profile.dcp\
	Olympus_E-PL5_Rawstudio_Advanced_Profile.dcp\
	Olympus_E-PM1_Rawstudio_Advanced_Profile.dcp\
	Olympus_E-PM2_Rawstudio_Advanced_Profile.dcp\
	Olympus_XZ-1_Rawstudio_Advanced_Profile.dcp\
	PENTAX_645D_Rawstudio_Advanced_Profile.dcp\
	PENTAX_K-01_Rawstudio_Advanced_Profile.dcp\
	PENTAX_K-30_Rawstudio_Advanced_Profile.dcp\
	PENTAX_K-5_II_Rawstudio_Advanced_Profile.dcp\
	PENTAX_K-5_II_s_Rawstudio_Advanced_Profile.dcp\
	PENTAX_K-5_Rawstudio_Advanced_Profile.dcp\
	PENTAX_K-7_Rawstudio_Advanced_Profile.dcp\
	PENTAX_K-r_Rawstudio_Advanced_Profile.dcp\
	PENTAX_K-x_Rawstudio_Advanced_Profile.dcp\
	PENTAX_K10D_Rawstudio_Advanced_Profile.dcp\
	PENTAX_K2000_Rawstudio_Advanced_Profile.dcp\
	PENTAX_K200D_Rawstudio_Advanced_Profile.dcp\
	PENTAX_K20D_Rawstudio_Advanced_Profile.dcp\
	PENTAX_MX-1_Rawstudio_Advanced_Profile.dcp\
	PENTAX_Q_Rawstudio_Advanced_Profile.dcp\
	Panasonic_DMC-FZ150_Rawstudio_Advanced_Profile.dcp\
	Panasonic_DMC-FZ200_Rawstudio_Advanced_Profile.dcp\
	Panasonic_DMC-G1_Rawstudio_Advanced_Profile.dcp\
	Panasonic_DMC-G2_Rawstudio_Advanced_Profile.dcp\
	Panasonic_DMC-G3_Rawstudio_Advanced_Profile.dcp\
	Panasonic_DMC-G5_Rawstudio_Advanced_Profile.dcp\
	Panasonic_DMC-GF1_Rawstudio_Advanced_Profile.dcp\
	Panasonic_DMC-GF2_Rawstudio_Advanced_Profile.dcp\
	Panasonic_DMC-GF3_Rawstudio_Advanced_Profile.dcp\
	Panasonic_DMC-GF5_Rawstudio_Advanced_Profile.dcp\
	Panasonic_DMC-GH1_Rawstudio_Advanced_Profile.dcp\
	Panasonic_DMC-GH2_Rawstudio_Advanced_Profile.dcp\
	Panasonic_DMC-LX3_Rawstudio_Advanced_Profile.dcp\
	Panasonic_DMC-LX5_Rawstudio_Advanced_Profile.dcp\
	Panasonic_DMC-LX7_Rawstudio_Advanced_Profile.dcp\
	Pentax_K100D_Rawstudio_Advanced_Profile.dcp\
	Sony_DSLR-A200_Rawstudio_Advanced_Profile.dcp\
	Sony_DSLR-A230_Rawstudio_Advanced_Profile.dcp\
	Sony_DSLR-A290_Rawstudio_Advanced_Profile.dcp\
	Sony_DSLR-A330_Rawstudio_Advanced_Profile.dcp\
	Sony_DSLR-A350_Rawstudio_Advanced_Profile.dcp\
	Sony_DSLR-A380_Rawstudio_Advanced_Profile.dcp\
	Sony_DSLR-A390_Rawstudio_Advanced_Profile.dcp\
	Sony_DSLR-A500_Rawstudio_Advanced_Profile.dcp\
	Sony_DSLR-A550_Rawstudio_Advanced_Profile.dcp\
	Sony_DSLR-A560_Rawstudio_Advanced_Profile.dcp\
	Sony_DSLR-A580_Rawstudio_Advanced_Profile.dcp\
	Sony_DSLR-A700_Rawstudio_Advanced_Profile.dcp\
	Sony_DSLR-A850_Rawstudio_Advanced_Profile.dcp\
	Sony_DSLR-A900_Rawstudio_Advanced_Profile.dcp\
	Sony_NEX-3_Rawstudio_Advanced_Profile.dcp\
	Sony_NEX-5N_Rawstudio_Advanced_Profile.dcp\
	Sony_NEX-5_Rawstudio_Advanced_Profile.dcp\
	Sony_NEX-6_Rawstudio_Advanced_Profile.dcp\
	Sony_NEX-7_Rawstudio_Advanced_Profile.dcp\
	Sony_NEX-C3_Rawstudio_Advanced_Profile.dcp\
	Sony_SLT-A33_Rawstudio_Advanced_Profile.dcp\
	Sony_SLT-A35_Rawstudio_Advanced_Profile.dcp\
	Sony_SLT-A37_Rawstudio_Advanced_Profile.dcp\
	Sony_SLT-A55V_Rawstudio_Advanced_Profile.dcp\
	Sony_SLT-A57_Rawstudio_Advanced_Profile.dcp\
	Sony_SLT-A65_Rawstudio_Advanced_Profile.dcp\
	Sony_SLT-A77_Rawstudio_Advanced_Profile.dcp\
	Sony_SLT-A99V_Rawstudio_Advanced_Profile.dcp\
	FUJIFILM_X-Pro1-simple.dcp\
	Panasonic_DMC-GF5-simple.dcp\
	SAMSUNG_NX1000-simple.dcp\
	SONY_DSC-R100-simple.dcp\
	SONY_NEX-6-simple.dcp\
	SONY_SLTA99V-simple.dcp\
	Leica-D-LUX-4-simple.dcp\
	NIKON_1_J2.dcp\
	NIKON_COOLPIX_P7700-simple.dcp\
	Panasonic_DMC-FZ200-simple.dcp\
	Panasonic_DMC-G5-simple.dcp\
	Panasonic_DMC-LX7-simple.dcp\
	PENTAX_K-30-camera.dcp\
	SONY_NEX-5R-simple.dcp\
	Canon_EOS_M-simple.dcp\
	FUJIFILM_FinePix_F800_EXR-simple.dcp\
	FUJIFILM_X-E1-simple.dcp\
	Leaf_Credo_40-simple.dcp\
	Leaf_Credo_60-simple.dcp\
	Canon_EOS_650D-simple.dcp\
	Canon_PowerShot_G15-simple.dcp\
	Canon_PowerShot_S110-simple.dcp\
	Canon_PowerShot_SX50_HS-simple.dcp\
	OLYMPUS_E-PL5-simple.dcp\
	OLYMPUS_E-PM2-simple.dcp\
	OLYMPUS_XZ-2-simple.dcp\
	Panasonic_DMC-GH3-simple.dcp\
	PENTAX_K-5_II-simple.dcp\
	PENTAX_K-5_II_s-simple.dcp\
	PENTAX_Q10-simple.dcp\
	Canon_EOS_6D-simple.dcp\
	NIKON_D5200-simple.dcp\
	SONY_DSC-RX1-simple.dcp\
	Canon_EOS_100D-simple.dcp\
	Canon_EOS_700D-simple.dcp\
	Canon_EOS-1D_C-simple.dcp\
	Fujifilm_FinePix_F900EXR-simple.dcp\
	Fujifilm_FinePix_HS50EXR-simple.dcp\
	Fujifilm_FinePix_SL1000-simple.dcp\
	Fujifilm_X100S-simple.dcp\
	Fujifilm_X20-simple.dcp\
	LEICA_M_(Typ_240)-simple.dcp\
	Nikon_1_J3-simple.dcp\
	Nikon_1_S1-simple.dcp\
	Nikon_Coolpix_A-simple.dcp\
	Nikon_Coolpix_P330-simple.dcp\
	Nikon_D7100-simple.dcp\
	Olympus_E-P5-simple.dcp\
	Olympus_E-PL6-simple.dcp\
	Olympus_XZ-10-simple.dcp\
	Panasonic_DMC-G6-simple.dcp\
	Panasonic_DMC-LF1-simple.dcp\
	PENTAX_MX-1-simple.dcp\
	RICOH_GR_A12_50mm_F2.5_MACRO-simple.dcp\
	Ricoh_GR_DIGITAL_3-simple.dcp\
	Ricoh_GR_DIGITAL_4-simple.dcp\
	RICOH_GR_LENS_A12_28mm_F2.5-simple.dcp\
	Samsung_NX300-simple.dcp\
	Sony_DSC-RX100-simple.dcp\
	Sony_DSC-RX100M2-simple.dcp\
	Sony_DSC-RX1R-simple.dcp\
	Sony_NEX-3N-simple.dcp\
	Sony_SLT-A58-simple.dcp\
	Canon_EOS_70D-simple.dcp\
	Canon_PowerShot_G16-simple.dcp\
	Panasonic_DMC-FZ70-simple.dcp\
	PENTAX_K-50-simple.dcp\
	PENTAX_K-500-simple.dcp\
	PENTAX_Q7-simple.dcp\
	Sony_ILCE-3000-simple.dcp\
	Sony_NEX-5T-simple.dcp\
	NIKON_COOLPIX_P7100-simple.dcp

EXTRA_DIST = $(rawstudio_DATA)\
	recipes/Canon_1000D.dcpr\
	recipes/Canon_1DS_MK3.dcpr\
	recipes/Canon_1D_MK3.dcpr\
	recipes/Canon_1D_MK4.dcpr\
	recipes/Canon_400D.dcpr\
	recipes/Canon_40D.dcpr\
	recipes/Canon_450D.dcpr\
	recipes/Canon_500D.dcpr\
	recipes/Canon_50D.dcpr\
	recipes/Canon_550D.dcpr\
	recipes/Canon_5D_MK2.dcpr\
	recipes/Canon_600D.dcpr\
	recipes/Canon_60D.dcpr\
	recipes/Canon_7D.dcpr\
	recipes/Canon_G10.dcpr\
	recipes/Canon_G11.dcpr\
	recipes/Canon_S100.dcpr\
	recipes/Canon_S90.dcpr\
	recipes/Nikon_D200.dcpr\
	recipes/Nikon_D2X.dcpr\
	recipes/Nikon_D3.dcpr\
	recipes/Nikon_D300.dcpr\
	recipes/Nikon_D3000.dcpr\
	recipes/Nikon_D300S.dcpr\
	recipes/Nikon_D3100.dcpr\
	recipes/Nikon_D3S.dcpr\
	recipes/Nikon_D3X.dcpr\
	recipes/Nikon_D40.dcpr\
	recipes/Nikon_D40X.dcpr\
	recipes/Nikon_D5000.dcpr\
	recipes/Nikon_D5100.dcpr\
	recipes/Nikon_D60.dcpr\
	recipes/Nikon_D700.dcpr\
	recipes/Nikon_D7000.dcpr\
	recipes/Nikon_D80.dcpr\
	recipes/Nikon_D90.dcpr\
	recipes/Nikon_J1.dcpr\
	recipes/Nikon_V1.dcpr\
	recipes/Olympus_E3.dcpr\
	recipes/Olympus_E30.dcpr\
	recipes/Olympus_E410.dcpr\
	recipes/Olympus_E420.dcpr\
	recipes/Olympus_E5.dcpr\
	recipes/Olympus_E510.dcpr\
	recipes/Olympus_E520.dcpr\
	recipes/Olympus_E620.dcpr\
	recipes/Olympus_EP2.dcpr\
	recipes/Olympus_EP3.dcpr\
	recipes/Olympus_EPL1.dcpr\
	recipes/Olympus_EPL2.dcpr\
	recipes/Olympus_EPM1.dcpr\
	recipes/Olympus_XZ1.dcpr\
	recipes/Panasonic_DMC-G1.dcpr\
	recipes/Panasonic_DMC-G2.dcpr\
	recipes/Panasonic_DMC-G3.dcpr\
	recipes/Panasonic_DMC-GF1.dcpr\
	recipes/Panasonic_DMC-GF2.dcpr\
	recipes/Panasonic_DMC-GF3.dcpr\
	recipes/Panasonic_DMC-GH1.dcpr\
	recipes/Panasonic_DMC-GH2.dcpr\
	recipes/Panasonic_DMC-LX3.dcpr\
	recipes/Pentax_645D.dcpr\
	recipes/Pentax_K100D.dcpr\
	recipes/Pentax_K10D.dcpr\
	recipes/Pentax_K2000.dcpr\
	recipes/Pentax_K200D.dcpr\
	recipes/Pentax_K20D.dcpr\
	recipes/Pentax_K5.dcpr\
	recipes/Pentax_K7.dcpr\
	recipes/Pentax_Kr.dcpr\
	recipes/Pentax_Kx.dcpr\
	recipes/Pentax_MX1.dcpr\
	recipes/Pentax_Q.dcpr\
	recipes/Sony_A200.dcpr\
	recipes/Sony_A230.dcpr\
	recipes/Sony_A290.dcpr\
	recipes/Sony_A330.dcpr\
	recipes/Sony_A350.dcpr\
	recipes/Sony_A380.dcpr\
	recipes/Sony_A390.dcpr\
	recipes/Sony_A500.dcpr\
	recipes/Sony_A550.dcpr\
	recipes/Sony_A560.dcpr\
	recipes/Sony_A580.dcpr\
	recipes/Sony_A700.dcpr\
	recipes/Sony_A850.dcpr\
	recipes/Sony_A900.dcpr\
	recipes/Sony_NEX-C3.dcpr\
	recipes/Sony_NEX3.dcpr\
	recipes/Sony_NEX5.dcpr\
	recipes/Sony_NEX5N.dcpr\
	recipes/Sony_SLT-A33.dcpr\
	recipes/Sony_SLT-A35.dcpr\
	recipes/Sony_SLT-A55V.dcpr\
	recipes/Sony_SLT-A77.dcpr\
	recipes/Sony_SLT-A99.dcpr\
	recipes/Sony_SLT-A65.dcpr\
	recipes/Sony_SLT-A57.dcpr\
	recipes/Sony_SLT-A37.dcpr\
	recipes/Canon_650D.dcpr\
	recipes/Canon_1100D.dcpr\
	recipes/Canon_S110.dcpr\
	recipes/Panasonic_P7700.dcpr\
	recipes/Sony_NEX7.dcpr\
	recipes/Canon_G12.dcpr\
	recipes/Sony_NEX6.dcpr\
	recipes/Panasonic_DMC-LX7.dcpr\
	recipes/Panasonic_DMC-LX5.dcpr\
	recipes/Pentax_K5-2s.dcpr\
	recipes/Pentax_K5-2.dcpr\
	recipes/Pentax_K30.dcpr\
	recipes/Pentax_K01.dcpr\
	recipes/Panasonic_DMC-GF5.dcpr\
	recipes/Canon_G15.dcpr\
	recipes/Panasonic_DMC-G5.dcpr\
	recipes/Canon_G1X.dcpr\
	recipes/Panasonic_FZ200.dcpr\
	recipes/Panasonic_FZ150.dcpr\
	recipes/Olympus_EPM2.dcpr\
	recipes/Olympus_EPL5.dcpr\
	recipes/Canon_M.dcpr\
	recipes/Olympus_EM5.dcpr\
	recipes/Canon_6D.dcpr\
	recipes/Canon_5D_MK3.dcpr\
	recipes/Canon_1DX.dcpr\
	recipes/Nikon_D3200.dcpr\
	recipes/Nikon_D800.dcpr\
	recipes/Nikon_D600.dcpr\
	recipes/Nikon_D4.dcpr\
	simple-src/AGFAPHOTO_DC-833m-simple.xml\
	simple-src/Apple_QuickTake-simple.xml\
	simple-src/Canon_EOS-1D-simple.xml\
	simple-src/Canon_EOS-1DS-simple.xml\
	simple-src/Canon_EOS-1Ds_Mark_II-simple.xml\
	simple-src/Canon_EOS-1Ds_Mark_III-simple.xml\
	simple-src/Canon_EOS-1D_Mark_II-simple.xml\
	simple-src/Canon_EOS-1D_Mark_III-simple.xml\
	simple-src/Canon_EOS-1D_Mark_II_N-simple.xml\
	simple-src/Canon_EOS-1D_Mark_IV-simple.xml\
	simple-src/Canon_EOS-simple.xml\
	simple-src/Canon_EOS_1000D-simple.xml\
	simple-src/Canon_EOS_10D-simple.xml\
	simple-src/Canon_EOS_1100D-simple.xml\
	simple-src/Canon_EOS_20D-simple.xml\
	simple-src/Canon_EOS_20Da-simple.xml\
	simple-src/Canon_EOS_300D-simple.xml\
	simple-src/Canon_EOS_30D-simple.xml\
	simple-src/Canon_EOS_350D-simple.xml\
	simple-src/Canon_EOS_400D-simple.xml\
	simple-src/Canon_EOS_40D-simple.xml\
	simple-src/Canon_EOS_450D-simple.xml\
	simple-src/Canon_EOS_500D-simple.xml\
	simple-src/Canon_EOS_50D-simple.xml\
	simple-src/Canon_EOS_550D-simple.xml\
	simple-src/Canon_EOS_5D-simple.xml\
	simple-src/Canon_EOS_5D_Mark_II-simple.xml\
	simple-src/Canon_EOS_600D-simple.xml\
	simple-src/Canon_EOS_60D-simple.xml\
	simple-src/Canon_EOS_7D-simple.xml\
	simple-src/Canon_EOS_D2000-simple.xml\
	simple-src/Canon_EOS_D30-simple.xml\
	simple-src/Canon_EOS_D60-simple.xml\
	simple-src/Canon_EOS_D6000-simple.xml\
	simple-src/Canon_PowerShot_A470-simple.xml\
	simple-src/Canon_PowerShot_A5-simple.xml\
	simple-src/Canon_PowerShot_A50-simple.xml\
	simple-src/Canon_PowerShot_A530-simple.xml\
	simple-src/Canon_PowerShot_A610-simple.xml\
	simple-src/Canon_PowerShot_A620-simple.xml\
	simple-src/Canon_PowerShot_A630-simple.xml\
	simple-src/Canon_PowerShot_A640-simple.xml\
	simple-src/Canon_PowerShot_A650-simple.xml\
	simple-src/Canon_PowerShot_A720-simple.xml\
	simple-src/Canon_PowerShot_G1-simple.xml\
	simple-src/Canon_PowerShot_G10-simple.xml\
	simple-src/Canon_PowerShot_G11-simple.xml\
	simple-src/Canon_PowerShot_G12-simple.xml\
	simple-src/Canon_PowerShot_G2-simple.xml\
	simple-src/Canon_PowerShot_G3-simple.xml\
	simple-src/Canon_PowerShot_G5-simple.xml\
	simple-src/Canon_PowerShot_G6-simple.xml\
	simple-src/Canon_PowerShot_G9-simple.xml\
	simple-src/Canon_PowerShot_Pro1-simple.xml\
	simple-src/Canon_PowerShot_Pro70-simple.xml\
	simple-src/Canon_PowerShot_Pro90-simple.xml\
	simple-src/Canon_PowerShot_S100-simple.xml\
	simple-src/Canon_PowerShot_S30-simple.xml\
	simple-src/Canon_PowerShot_S3_IS-simple.xml\
	simple-src/Canon_PowerShot_S40-simple.xml\
	simple-src/Canon_PowerShot_S45-simple.xml\
	simple-src/Canon_PowerShot_S50-simple.xml\
	simple-src/Canon_PowerShot_S60-simple.xml\
	simple-src/Canon_PowerShot_S70-simple.xml\
	simple-src/Canon_PowerShot_S90-simple.xml\
	simple-src/Canon_PowerShot_S95-simple.xml\
	simple-src/Canon_PowerShot_SX110_IS-simple.xml\
	simple-src/Canon_PowerShot_SX1_IS-simple.xml\
	simple-src/CASIO_EX-S20-simple.xml\
	simple-src/CASIO_EX-Z750-simple.xml\
	simple-src/CINE-simple.xml\
	simple-src/CINE_650-simple.xml\
	simple-src/CINE_660-simple.xml\
	simple-src/Contax_N_Digital-simple.xml\
	simple-src/EPSON_R-D1-simple.xml\
	simple-src/FUJIFILM_FinePix_E550-simple.xml\
	simple-src/FUJIFILM_FinePix_E900-simple.xml\
	simple-src/FUJIFILM_FinePix_F600_EXR-simple.xml\
	simple-src/FUJIFILM_FinePix_F7-simple.xml\
	simple-src/FUJIFILM_FinePix_F8-simple.xml\
	simple-src/FUJIFILM_FinePix_S100FS-simple.xml\
	simple-src/FUJIFILM_FinePix_S20Pro-simple.xml\
	simple-src/FUJIFILM_FinePix_S2Pro-simple.xml\
	simple-src/FUJIFILM_FinePix_S3Pro-simple.xml\
	simple-src/FUJIFILM_FinePix_S5000-simple.xml\
	simple-src/FUJIFILM_FinePix_S5100-simple.xml\
	simple-src/FUJIFILM_FinePix_S5200-simple.xml\
	simple-src/FUJIFILM_FinePix_S5500-simple.xml\
	simple-src/FUJIFILM_FinePix_S5600-simple.xml\
	simple-src/FUJIFILM_FinePix_S5Pro-simple.xml\
	simple-src/FUJIFILM_FinePix_S6-simple.xml\
	simple-src/FUJIFILM_FinePix_S6000fd-simple.xml\
	simple-src/FUJIFILM_FinePix_S7000-simple.xml\
	simple-src/FUJIFILM_FinePix_S9000-simple.xml\
	simple-src/FUJIFILM_FinePix_S9100-simple.xml\
	simple-src/FUJIFILM_FinePix_S9500-simple.xml\
	simple-src/FUJIFILM_FinePix_S9600-simple.xml\
	simple-src/FUJIFILM_FinePix_X100-simple.xml\
	simple-src/FUJIFILM_IS-1-simple.xml\
	simple-src/FUJIFILM_IS_Pro-simple.xml\
	simple-src/Fuji_HS10-simple.xml\
	simple-src/FUJIFILM_FinePix_F550EXR-simple.xml\
	simple-src/FUJIFILM_FinePix_F710-simple.xml\
	simple-src/FUJIFILM_FinePix_F700-simple.xml\
	simple-src/FUJIFILM_FinePix_E810-simple.xml\
	simple-src/Fuji_HS20EXR-simple.xml\
	simple-src/FUJIFILM_FinePix_S200EXR-simple.xml\
	simple-src/Imacon_Ixpress-simple.xml\
	simple-src/Kodak_DCS315C-simple.xml\
	simple-src/Kodak_DCS330C-simple.xml\
	simple-src/KODAK_DCS420-simple.xml\
	simple-src/KODAK_DCS460-simple.xml\
	simple-src/Kodak_DCS520C-simple.xml\
	simple-src/Kodak_DCS560C-simple.xml\
	simple-src/Kodak_DCS620C-simple.xml\
	simple-src/Kodak_DCS620X-simple.xml\
	simple-src/Kodak_DCS660C-simple.xml\
	simple-src/Kodak_DCS720X-simple.xml\
	simple-src/Kodak_DCS760C-simple.xml\
	simple-src/Kodak_DCS_Pro_14-simple.xml\
	simple-src/Kodak_DCS_Pro_14nx-simple.xml\
	simple-src/Kodak_DCS_Pro_SLR-simple.xml\
	simple-src/KODAK_EASYSHARE_Z1015-simple.xml\
	simple-src/KODAK_EasyShare_Z980-simple.xml\
	simple-src/KODAK_EOSDCS1-simple.xml\
	simple-src/KODAK_EOSDCS3B-simple.xml\
	simple-src/KODAK_NC2000-simple.xml\
	simple-src/KODAK_P712-simple.xml\
	simple-src/KODAK_P850-simple.xml\
	simple-src/KODAK_P880-simple.xml\
	simple-src/Kodak_ProBack-simple.xml\
	simple-src/Kodak_ProBack645-simple.xml\
	simple-src/Konica_Minolta_DiMAGE_A2-simple.xml\
	simple-src/Konica_Minolta_DiMAGE_A200-simple.xml\
	simple-src/Konica_Minolta_Maxxum_5D-simple.xml\
	simple-src/Konica_Minolta_Maxxum_7D-simple.xml\
	simple-src/Leaf-simple.xml\
	simple-src/Leaf_Aptus_54S-simple.xml\
	simple-src/Leaf_Aptus_65-simple.xml\
	simple-src/Leaf_Aptus_75-simple.xml\
	simple-src/Leaf_CMost-simple.xml\
	simple-src/Leaf_Valeo_6-simple.xml\
	simple-src/Leica-M8-simple.xml\
	simple-src/Leica-M9-native.xml\
	simple-src/Leica-S2-simple.xml\
	simple-src/Leica-X1-native.xml\
	simple-src/Mamiya_ZD-simple.xml\
	simple-src/Micron_2010-simple.xml\
	simple-src/Minolta_DiMAGE_5-simple.xml\
	simple-src/Minolta_DiMAGE_7-simple.xml\
	simple-src/Minolta_DiMAGE_7Hi-simple.xml\
	simple-src/Minolta_DiMAGE_7i-simple.xml\
	simple-src/Minolta_DiMAGE_A1-simple.xml\
	simple-src/Minolta_DiMAGE_Z2-simple.xml\
	simple-src/MINOLTA_DYNAX_5-simple.xml\
	simple-src/MINOLTA_DYNAX_7-simple.xml\
	simple-src/MOTOROLA_PIXL-simple.xml\
	simple-src/Neutral-With-Tonecurve-AdobeRGB.xml\
	simple-src/Neutral-With-Tonecurve-Prophoto.xml\
	simple-src/Neutral-With-Tonecurve-sRGB.xml\
	simple-src/NIKON_1_J1.xml\
	simple-src/NIKON_1_V1.xml\
	simple-src/NIKON_COOLPIX_P6000-simple.xml\
	simple-src/NIKON_COOLPIX_P7000-simple.xml\
	simple-src/NIKON_COOLPIX_P7100-simple.xml\
	simple-src/NIKON_D1-simple.xml\
	simple-src/NIKON_D100-simple.xml\
	simple-src/NIKON_D1H-simple.xml\
	simple-src/NIKON_D1X-simple.xml\
	simple-src/NIKON_D200-simple.xml\
	simple-src/NIKON_D2H-simple.xml\
	simple-src/NIKON_D2X-simple.xml\
	simple-src/NIKON_D3-simple.xml\
	simple-src/NIKON_D300-simple.xml\
	simple-src/NIKON_D3000-simple.xml\
	simple-src/NIKON_D3100-simple.xml\
	simple-src/NIKON_D3200-simple.xml\
	simple-src/NIKON_D3S-simple.xml\
	simple-src/NIKON_D3X-simple.xml\
	simple-src/NIKON_D40-simple.xml\
	simple-src/NIKON_D40X-simple.xml\
	simple-src/NIKON_D50-simple.xml\
	simple-src/NIKON_D5000-simple.xml\
	simple-src/NIKON_D5100-simple.xml\
	simple-src/NIKON_D60-simple.xml\
	simple-src/NIKON_D70-simple.xml\
	simple-src/NIKON_D700-simple.xml\
	simple-src/NIKON_D7000-simple.xml\
	simple-src/NIKON_D70s-simple.xml\
	simple-src/NIKON_D80-simple.xml\
	simple-src/NIKON_D90-simple.xml\
	simple-src/NIKON_E2100-simple.xml\
	simple-src/NIKON_E2500-simple.xml\
	simple-src/NIKON_E4300-simple.xml\
	simple-src/NIKON_E4500-simple.xml\
	simple-src/NIKON_E5000-simple.xml\
	simple-src/NIKON_E5400-simple.xml\
	simple-src/NIKON_E5700-simple.xml\
	simple-src/NIKON_E8400-simple.xml\
	simple-src/NIKON_E8700-simple.xml\
	simple-src/NIKON_E8800-simple.xml\
	simple-src/NIKON_E950-simple.xml\
	simple-src/NIKON_E995-simple.xml\
	simple-src/OLYMPUS_C5050-simple.xml\
	simple-src/OLYMPUS_C5060-simple.xml\
	simple-src/OLYMPUS_C70-simple.xml\
	simple-src/OLYMPUS_C7070-simple.xml\
	simple-src/OLYMPUS_C80-simple.xml\
	simple-src/OLYMPUS_E-1-simple.xml\
	simple-src/OLYMPUS_E-10-simple.xml\
	simple-src/OLYMPUS_E-20-simple.xml\
	simple-src/OLYMPUS_E-3-simple.xml\
	simple-src/OLYMPUS_E-30-simple.xml\
	simple-src/OLYMPUS_E-300-simple.xml\
	simple-src/OLYMPUS_E-330-simple.xml\
	simple-src/OLYMPUS_E-400-simple.xml\
	simple-src/OLYMPUS_E-410-simple.xml\
	simple-src/OLYMPUS_E-420-simple.xml\
	simple-src/OLYMPUS_E-450-simple.xml\
	simple-src/OLYMPUS_E-5-simple.xml\
	simple-src/OLYMPUS_E-500-simple.xml\
	simple-src/OLYMPUS_E-510-simple.xml\
	simple-src/OLYMPUS_E-520-simple.xml\
	simple-src/OLYMPUS_E-620-simple.xml\
	simple-src/OLYMPUS_E-P1-simple.xml\
	simple-src/OLYMPUS_E-P3-simple.xml\
	simple-src/OLYMPUS_E-PL1-simple.xml\
	simple-src/OLYMPUS_E-PL1s-simple.xml\
	simple-src/OLYMPUS_E-PL2-simple.xml\
	simple-src/OLYMPUS_E-PL3-simple.xml\
	simple-src/OLYMPUS_E-PM1-simple.xml\
	simple-src/OLYMPUS_SP3-simple.xml\
	simple-src/OLYMPUS_SP350-simple.xml\
	simple-src/OLYMPUS_SP500UZ-simple.xml\
	simple-src/OLYMPUS_SP510UZ-simple.xml\
	simple-src/OLYMPUS_SP550UZ-simple.xml\
	simple-src/OLYMPUS_SP560UZ-simple.xml\
	simple-src/OLYMPUS_SP570UZ-simple.xml\
	simple-src/OLYMPUS_XZ-1-simple.xml\
	simple-src/Panasonic_DMC-FX150-simple.xml\
	simple-src/Panasonic_DMC-FZ18-simple.xml\
	simple-src/Panasonic_DMC-FZ28-simple.xml\
	simple-src/Panasonic_DMC-FZ30-simple.xml\
	simple-src/Panasonic_DMC-FZ35-simple.xml\
	simple-src/Panasonic_DMC-FZ50-simple.xml\
	simple-src/Panasonic_DMC-FZ8-simple.xml\
	simple-src/Panasonic_DMC-G1-simple.xml\
	simple-src/Panasonic_DMC-G10-simple.xml\
	simple-src/Panasonic_DMC-G2-simple.xml\
	simple-src/Panasonic_DMC-G3-simple.xml\
	simple-src/Panasonic_DMC-GF1-simple.xml\
	simple-src/Panasonic_DMC-GF2-simple.xml\
	simple-src/Panasonic_DMC-GF3-simple.xml\
	simple-src/Panasonic_DMC-GH1-simple.xml\
	simple-src/Panasonic_DMC-GH2-simple.xml\
	simple-src/Panasonic_DMC-GX1-simple.xml\
	simple-src/Panasonic_DMC-L1-simple.xml\
	simple-src/Panasonic_DMC-L10-simple.xml\
	simple-src/Panasonic_DMC-LC1-simple.xml\
	simple-src/Panasonic_DMC-LX1-simple.xml\
	simple-src/Panasonic_DMC-LX2-simple.xml\
	simple-src/Panasonic_DMC-LX3-simple.xml\
	simple-src/Panasonic_FZ100-simple.xml\
	simple-src/Panasonic_FZ40-simple.xml\
	simple-src/Panasonic_LX5-simple.xml\
	simple-src/PENTAX_645D-simple.xml\
	simple-src/PENTAX_istD-simple.xml\
	simple-src/PENTAX_istDL-simple.xml\
	simple-src/PENTAX_istDL2-simple.xml\
	simple-src/PENTAX_istDS-simple.xml\
	simple-src/PENTAX_istDS2-simple.xml\
	simple-src/PENTAX_K-5-simple.xml\
	simple-src/PENTAX_K-7-simple.xml\
	simple-src/PENTAX_K-m-simple.xml\
	simple-src/PENTAX_K-r-simple.xml\
	simple-src/PENTAX_K-x-simple.xml\
	simple-src/PENTAX_K-01-simple.xml\
	simple-src/PENTAX_K1-simple.xml\
	simple-src/PENTAX_K100D-simple.xml\
	simple-src/PENTAX_K10D-simple.xml\
	simple-src/PENTAX_K110D-simple.xml\
	simple-src/PENTAX_K2000-simple.xml\
	simple-src/PENTAX_K200D-simple.xml\
	simple-src/PENTAX_K20D-simple.xml\
	simple-src/PENTAX_Q-simple.xml\
	simple-src/Phase_One_H_20-simple.xml\
	simple-src/Phase_One_P65-simple.xml\
	simple-src/Phase_One_P_2-simple.xml\
	simple-src/Phase_One_P_30-simple.xml\
	simple-src/Phase_One_P_45-simple.xml\
	simple-src/Ricoh_A12_28mm-simple.xml\
	simple-src/Ricoh_A12_50mm-simple.xml\
	simple-src/Ricoh_Digital_3-simple.xml\
	simple-src/Ricoh_GX200-simple.xml\
	simple-src/Ricoh_S10_24-72mm-simple.xml\
	simple-src/SAMSUNG_EX1-simple.xml\
	simple-src/SAMSUNG_GX-1-simple.xml\
	simple-src/SAMSUNG_GX-1L-simple.xml\
	simple-src/SAMSUNG_GX-1S-simple.xml\
	simple-src/SAMSUNG_GX10-simple.xml\
	simple-src/SAMSUNG_GX20-simple.xml\
	simple-src/SAMSUNG_NX10-simple.xml\
	simple-src/SAMSUNG_NX100-simple.xml\
	simple-src/SAMSUNG_NX200-simple.xml\
	simple-src/SAMSUNG_NX210-simple.xml\
	simple-src/SAMSUNG_NX11-simple.xml\
	simple-src/SAMSUNG_NX5-simple.xml\
	simple-src/SAMSUNG_S85-simple.xml\
	simple-src/SAMSUNG_WB2000-simple.xml\
	simple-src/Sinar-simple.xml\
	simple-src/SONY_DSC-F828-simple.xml\
	simple-src/SONY_DSC-R1-simple.xml\
	simple-src/SONY_DSC-V3-simple.xml\
	simple-src/SONY_DSLR-A100-simple.xml\
	simple-src/SONY_DSLR-A200-simple.xml\
	simple-src/SONY_DSLR-A230-simple.xml\
	simple-src/SONY_DSLR-A290-simple.xml\
	simple-src/SONY_DSLR-A300-simple.xml\
	simple-src/SONY_DSLR-A330-simple.xml\
	simple-src/SONY_DSLR-A350-simple.xml\
	simple-src/SONY_DSLR-A380-simple.xml\
	simple-src/SONY_DSLR-A390-simple.xml\
	simple-src/SONY_DSLR-A450-simple.xml\
	simple-src/SONY_DSLR-A5-simple.xml\
	simple-src/SONY_DSLR-A500-simple.xml\
	simple-src/SONY_DSLR-A550-simple.xml\
	simple-src/SONY_DSLR-A560-simple.xml\
	simple-src/SONY_DSLR-A580-simple.xml\
	simple-src/SONY_DSLR-A700-simple.xml\
	simple-src/SONY_DSLR-A850-simple.xml\
	simple-src/SONY_DSLR-A900-simple.xml\
	simple-src/SONY_NEX-3-simple.xml\
	simple-src/SONY_NEX-5-simple.xml\
	simple-src/SONY_NEX-5N-simple.xml\
	simple-src/SONY_NEX-C3-simple.xml\
	simple-src/SONY_SLTA33-simple.xml\
	simple-src/SONY_SLTA35-simple.xml\
	simple-src/SONY_SLTA37-simple.xml\
	simple-src/SONY_SLTA55V-simple.xml\
	simple-src/SONY_SLTA65V-simple.xml\
	simple-src/Canon_EOS_5D_Mark_III-simple.xml\
	simple-src/Canon_PowerShot_G1X-simple.xml\
	simple-src/Canon_EOS-1D_X-simple.xml\
	simple-src/FUJIFILM_FinePix_HS30_EXR-simple.xml\
	simple-src/NIKON_D800E-simple.xml\
	simple-src/FUJIFILM_FinePix_X-S1-simple.xml\
	simple-src/NIKON_D4.xml\
	simple-src/NIKON_D800-simple.xml\
	simple-src/SONY_SLTA77V-simple.xml\
	simple-src/Canon_EOS_650D-simple.xml\
	simple-src/SONY_DSC-R100-simple.xml\
	simple-src/SAMSUNG_NX1000-simple.xml\
	simple-src/Panasonic_DMC-GF5-simple.xml\
	simple-src/FUJIFILM_X-Pro1-simple.xml\
	simple-src/Canon_EOS_60Da-simple.xml\
	simple-src/Leaf_Credo_60-simple.xml\
	simple-src/Leaf_Credo_40-simple.xml\
	simple-src/FUJIFILM_X-E1-simple.xml\
	simple-src/FUJIFILM_FinePix_F800_EXR-simple.xml\
	simple-src/Canon_EOS_M-simple.xml\
	simple-src/SONY_NEX-5R-simple.xml\
	simple-src/PENTAX_K-30-simple.xml\
	simple-src/Panasonic_DMC-LX7-simple.xml\
	simple-src/Panasonic_DMC-G5-simple.xml\
	simple-src/Panasonic_DMC-FZ200-simple.xml\
	simple-src/NIKON_COOLPIX_P7700-simple.xml\
	simple-src/NIKON_1_J2.xml\
	simple-src/Leica-D-LUX-4-simple.xml\
	simple-src/SONY_SLTA99V-simple.xml\
	simple-src/SONY_NEX-6-simple.xml\
	simple-src/SONY_SLTA37-simple.xml\	
	simple-src/PENTAX_K-30-simple.xml\
	simple-src/PENTAX_Q10-simple.xml\
	simple-src/PENTAX_K-5_II_s-simple.xml\
	simple-src/PENTAX_K-5_II-simple.xml\
	simple-src/Panasonic_DMC-GH3-simple.xml\
	simple-src/OLYMPUS_XZ-2-simple.xml\
	simple-src/OLYMPUS_E-PM2-simple.xml\
	simple-src/OLYMPUS_E-PL5-simple.xml\
	simple-src/Canon_PowerShot_SX50_HS-simple.xml\
	simple-src/Canon_PowerShot_S110-simple.xml\
	simple-src/Canon_PowerShot_G15-simple.xml\
	simple-src/SONY_DSC-RX1-simple.xml\
	simple-src/NIKON_D5200-simple.xml\
	simple-src/Sony_SLT-A58-simple.xml\
	simple-src/Sony_NEX-3N-simple.xml\
	simple-src/Sony_DSC-RX1R-simple.xml\
	simple-src/Sony_DSC-RX100M2-simple.xml\
	simple-src/Sony_DSC-RX100-simple.xml\
	simple-src/Samsung_NX300-simple.xml\
	simple-src/RICOH_GR_LENS_A12_28mm_F2.5-simple.xml\
	simple-src/Ricoh_GR_DIGITAL_4-simple.xml\
	simple-src/Ricoh_GR_DIGITAL_3-simple.xml\
	simple-src/RICOH_GR_A12_50mm_F2.5_MACRO-simple.xml\
	simple-src/PENTAX_MX-1-simple.xml\
	simple-src/Panasonic_DMC-LF1-simple.xml\
	simple-src/Panasonic_DMC-G6-simple.xml\
	simple-src/Olympus_XZ-10-simple.xml\
	simple-src/Olympus_E-PL6-simple.xml\
	simple-src/Olympus_E-P5-simple.xml\
	simple-src/Nikon_D7100-simple.xml\
	simple-src/Nikon_Coolpix_P330-simple.xml\
	simple-src/Nikon_Coolpix_A-simple.xml\
	simple-src/Nikon_1_S1-simple.xml\
	simple-src/Nikon_1_J3-simple.xml\
	simple-src/LEICA_M_(Typ_240)-simple.xml\
	simple-src/Fujifilm_X20-simple.xml\
	simple-src/Fujifilm_X100S-simple.xml\
	simple-src/Fujifilm_FinePix_SL1000-simple.xml\
	simple-src/Fujifilm_FinePix_HS50EXR-simple.xml\
	simple-src/Fujifilm_FinePix_F900EXR-simple.xml\
	simple-src/Canon_EOS-1D_C-simple.xml\
	simple-src/Canon_EOS_700D-simple.xml\
	simple-src/Canon_EOS_100D-simple.xml\
	simple-src/Panasonic_DMC-GX7-simple.xml\
	simple-src/Sony_NEX-5T-simple.xml\
	simple-src/Sony_ILCE-3000-simple.xml\
	simple-src/PENTAX_Q7-simple.xml\
	simple-src/PENTAX_K-500-simple.xml\
	simple-src/PENTAX_K-50-simple.xml\
	simple-src/Panasonic_DMC-FZ70-simple.xml\
	simple-src/Canon_PowerShot_G16-simple.xml\
	simple-src/Canon_EOS_70D-simple.xml\
	simple-src/Canon_EOS_6D-simple.xml